# homework5

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  controller.cpp  controller.h  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  menudata.js  model.cpp  model.h  modules.html  modules.js  navtreedata.js  navtreeindex0.js  pages.html  simple_graphical_vector_editor.cpp  test_simple_graphical_vector_editor_gtest.cpp  view.cpp  view.h
.github/workflows/: release.yml
d0/d30/: md_README.html
d0/d6f/: group__igraphicalprimitive.html  group__igraphicalprimitive.js
d0/db1/: classPolygon.html  classPolygon.js
d0/dfe/: classDocument-members.html
d1/d36/: classController-members.html
d1/d47/: controller_8cpp.html  controller_8cpp_source.html
d1/d53/: classIGraphicalPrimitive.html  classIGraphicalPrimitive.js
d1/d67/: classDocument.html  classDocument.js
d1/de5/: classTestController-members.html
d2/d1c/: classPolygon-members.html
d2/d51/: classTriangle.html  classTriangle.js
d2/dd9/: controller_8h.html  controller_8h_source.html
d3/d72/: classSquare.html  classSquare.js
d3/d73/: group__document.html  group__document.js
d3/dda/: view_8h.html  view_8h.js  view_8h_source.html
d5/dc4/: classCircle-members.html
d5/ddc/: classTestController.html  classTestController.js
d6/db4/: model_8cpp.html  model_8cpp_source.html
d7/d5d/: classIGraphicalPrimitive-members.html
d8/d53/: classCircle.html  classCircle.js  classTriangle-members.html
d8/df9/: simple__graphical__vector__editor_8cpp.html  simple__graphical__vector__editor_8cpp.js  simple__graphical__vector__editor_8cpp_source.html
d9/d85/: classController.html  classController.js
da/d9e/: CMakeLists_8txt.html
da/ddd/: README_8md.html
dc/d4b/: classSquare-members.html
dc/d51/: model_8h.html  model_8h_source.html
dc/d97/: test__simple__graphical__vector__editor__gtest_8cpp.html  test__simple__graphical__vector__editor__gtest_8cpp.js  test__simple__graphical__vector__editor__gtest_8cpp_source.html
dc/dbf/: group__controller.html  group__controller.js
dd/dc2/: view_8cpp.html  view_8cpp_source.html
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  defines_0.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  groups_0.js  groups_1.js  groups_2.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
